--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
 
 
 <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
-<script type="text/javascript" src="js/instafilta.js"></script>
-<script type="text/javascript" src="js/script.js"></script>
+<script type="text/javascript" src="js/cat-filter.js"></script>
 </body>
 </html>
